<?xml version="1.0"?>
<package>
  <name>performance_constraints_lwr</name>
  <version>0.0.0</version>
  <description>The performance_constraints_lwr package</description>

  <maintainer email="dimeasf@ece.auth.gr">Fotis</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>autharl_core</build_depend>
  <build_depend>lwr_robot</build_depend>
  <build_depend>performance_constraints</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>autharl_core</run_depend>
  <run_depend>lwr_robot</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>performance_constraints</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <export></export>

</package>
